# tickers

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tickers.toml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  worker.rs
backend/src/api/: handlers.rs  mod.rs  models.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/public/: styles.css
frontend/src/: api.rs  lib.rs
frontend/src/components/: footer.rs  header.rs  mod.rs  overall_status.rs  service_card.rs  status_bar.rs
migrations/: 001_initial.sql
