[workspace]
members = ["backend", "frontend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Skyak Tech"]
repository = "https://github.com/skyaktech/tickers"
homepage = "https://ticke.rs"
description = "A lightweight, self-hosted status page that monitors HTTP endpoints and displays uptime with tick mark UI"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
